--- a/project01/main.css
+++ b/project01/main.css
@@ -11,8 +11,9 @@ h2 {
 	
 }
 
-h6 {
-	
+#titlesub {
+	font-size:10pt;
+	color:#888;
 }
 
 #main {
@@ -39,6 +40,7 @@ ul.horizontal {
 
 .navitem {
 	display:inline;
+	padding-right:30px;
 }
 
 .navitem:hover {
