--- a/project03/depot/app/views/layouts/application.html.erb
+++ b/project03/depot/app/views/layouts/application.html.erb
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Depot</title>
+  <title>My Super Store!</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body class='<%= controller.controller_name %>'>
-
-<%= yield %>
-
+	<div id="banner">
+		<%= image_tag("http://hicaduda.com/Images/Logo.png") %>
+		<%= @page_title || "My Super Store!" %>
+	</div>
+	<div id="columns">
+		<div id="side">
+			<ul>
+				<li><a href="http://hicaduda.com">Home</a></li>
+				<li><a href="http://ios.hicaduda.com">iOS</a></li>
+				<li><a href="http://mac.hicaduda.com">Mac</a></li>
+				<li><a href="http://fun.hicaduda.com">Fun-Stuff</a></li>
+			</ul>
+		</div>
+		<div id="main">
+			<%= yield %>
+		</div>
+	</div>
 </body>
 </html>
