--- a/project03/depot/app/views/carts/show.html.erb
+++ b/project03/depot/app/views/carts/show.html.erb
@@ -2,11 +2,22 @@
 <p id="notice"><%= notice %></p>
 <% end %>
 
-<h2>Your Super Cart</h2>
-<ul>
+<div class "cart_title">Your Cart</div>
+<table>
 	<% @cart.line_items.each do |item| %>
-		<% if item.product %>
-			<li><%= item.quantity %> &times; <%= item.product.title %></li>
-		<% end %>
+		<!--% if item.product %-->
+		<tr>
+			<td><%= item.quantity %> &times;</td>
+			<td><%= item.product.title %></td>
+			<td class="item_price"><%= number_to_currency(item.total_price) %></td>
+			<td><%= link_to('Remove', item, confirm: 'Are you sure?', method: :delete) %></td>
+		</tr>
+		<!--% end %-->
 	<% end %>
-</ul>
+	<tr class="total_line">
+		<td colspan="2">Total</td>
+		<td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
+	</tr>
+</table>
+
+<%= button_to 'Empty cart', @cart, method: :delete, confirm: 'Are you sure?' %>
