Added basic AJAX to cart

--- a/project03/depot/app/views/layouts/application.html.erb
+++ b/project03/depot/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
 	</div>
 	<div id="columns">
 		<div id="side">
+			<div id="cart">
+				<%= render @cart %>
+			</div>
+			
 			<ul>
 				<li><a href="http://hicaduda.com">Home</a></li>
 				<li><a href="http://ios.hicaduda.com">iOS</a></li>
