--- a/project03/depot/app/views/layouts/application.html.erb
+++ b/project03/depot/app/views/layouts/application.html.erb
@@ -13,9 +13,11 @@
 	</div>
 	<div id="columns">
 		<div id="side">
-			<div id="cart">
-				<%= render @cart %>
-			</div>
+			<% if @cart %>
+				<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+					<%= render @cart %>
+				<% end %>
+			<% end %>
 			
 			<ul>
 				<li><a href="http://hicaduda.com">Home</a></li>
