--- a/project03/depot/app/views/layouts/application.html.erb
+++ b/project03/depot/app/views/layouts/application.html.erb
@@ -13,11 +13,13 @@
 	</div>
 	<div id="columns">
 		<div id="side">
-			<% if @cart %>
-				<%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
-					<%= render @cart %>
+				<% if @cart %>
+					<div id="cart">
+						<%= hidden_div_if(@cart.line_items.empty?, id: 'cart_holder') do %>
+							<%= render @cart %>
+						<% end %>
+					</div>
 				<% end %>
-			<% end %>
 			
 			<ul>
 				<li><a href="http://hicaduda.com">Home</a></li>
