--- a/project04/articles/app/views/layouts/application.html.erb
+++ b/project04/articles/app/views/layouts/application.html.erb
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Articles</title>
+  <title>Articl.es – All the World's Articles (with a name .com hipsters love)</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<div id="title">
+	<h1>Articl.es</h1>
+	<h2>Note to self: make this have funky, random subtitles</h2>
+</div>
+
+<div id="body">
+	<%= yield %>
+</div>
 
 </body>
 </html>
