--- a/project04/articles/app/assets/stylesheets/articles.css.scss
+++ b/project04/articles/app/assets/stylesheets/articles.css.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the Articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+table {
+	border:1px solid black;
+	width:900px;
+	margin-top:10px;
+	
+	th {
+		background-color:#DDD;
+	}
+}
+
+h1 {
+	display:inline;
+}
+
+#newLink {
+	float:right;
+}
