--- a/project04/articles/app/views/articles/_form.html.erb
+++ b/project04/articles/app/views/articles/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.text_area :body %>
   </div>
   <div class="actions">
+	<% if @article.edits = 0 %>
     <%= f.submit 'Create!' %>
+	<% else %>
+	<%= f.submit 'Save Changes' %>
+	<% end %>
   </div>
 <% end %>
