--- a/project04/articles/app/views/layouts/application.html.erb
+++ b/project04/articles/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 <div id="title">
 	<h1>Articl.es</h1>
-	<h2>Note to self: make this have funky, random subtitles</h2>
+	<h2><%= ['...with a name .com hipsters love!', '...what\'s "Articl" in Spanish anyway?', '...my cousin works for Bit.ly', '...not just for the country of Spain'].sample %></h2>
 </div>
 
 <div id="body">
