--- a/project04/articles/app/views/articles/edit.html.erb
+++ b/project04/articles/app/views/articles/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing article</h1>
 
+<%= link_to image_tag('icons/arrow_left.png'), articles_path %>
+<%= link_to 'back', articles_path %>
+<br><br>
+<h1>Editing "<%= @article.title %>"</h1>
+<br><br>
 <%= render 'form' %>
-
-<%= link_to 'Show', @article %> |
-<%= link_to 'Back', articles_path %>
