--- a/project04/articles/app/views/articles/index.html.erb
+++ b/project04/articles/app/views/articles/index.html.erb
@@ -5,7 +5,9 @@
 <%= link_to 'Create an Article', new_article_path %>
 </div>
 
+<div class="tablewrapper">
 <table>
+  <thead>
   <tr>
     <th>Title</th>
     <th>Author Name</th>
@@ -13,9 +15,10 @@
     <th>Creation Date</th>
     <th></th>
   </tr>
-
+  </thead>
+  <tbody>
 <% @articles.each do |article| %>
-  <tr>
+  <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
     <td><%= article.title %></td>
     <td><%= article.author %></td>
     <td><%= truncate(article.body, length: 65) %></td>
@@ -27,7 +30,9 @@
 	</td>
   </tr>
 <% end %>
+  </tbody>
 </table>
+</div>
 
 <br />
 
