--- a/project04/articles/app/views/articles/new.html.erb
+++ b/project04/articles/app/views/articles/new.html.erb
@@ -1,5 +1,7 @@
-<%= link_to 'Back', articles_path %>
 
+<%= link_to image_tag('icons/arrow_left.png'), articles_path %>
+<%= link_to 'list all articles', articles_path %>
+<br><br>
 <h1>Creating a New Article</h1>
-
+<br><br>
 <%= render 'form' %>
