--- a/project04/articles/app/views/articles/show.html.erb
+++ b/project04/articles/app/views/articles/show.html.erb
@@ -1,30 +1,25 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Title:</b>
-  <%= @article.title %>
-</p>
+<%= link_to image_tag('icons/arrow_left.png'), articles_path %>
+<%= link_to 'list all articles', articles_path %>
+
+<%= link_to image_tag('icons/book_edit.png'), edit_article_path(@article) %>
+<%= link_to 'edit', edit_article_path(@article) %>
+
+<%= link_to image_tag('icons/delete.png'), edit_article_path(@article) %>
+<%= link_to 'delete', @article, confirm: 'Are you sure?', method: :delete %>
+
+<%= link_to image_tag('icons/email.png'), edit_article_path(@article) %>
+<%= link_to 'email', edit_article_path(@article) %>
+
+<br><br>
+
+<h1><%= @article.title %></h1>
+
+<br><br>
+  By <%= @article.author %>. <%= pluralize(@article.edits, 'edit') %> since <%= @article.creation.strftime("%A, %b. %d %Y") %>
+<br><br>
 
 <p>
-  <b>Author:</b>
-  <%= @article.author %>
-</p>
-
-<p>
-  <b>Body:</b>
   <%= @article.body %>
 </p>
-
-<p>
-  <b>Creation:</b>
-  <%= @article.creation %>
-</p>
-
-<p>
-  <b>Edits:</b>
-  <%= @article.edits %>
-</p>
-
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
