Finished cool subtitles

--- a/project04/app/views/articles/edit.html.erb
+++ b/project04/app/views/articles/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for :subtitles do %>...my cousin works for Bit.ly<% end %>
+
 
 <%= link_to image_tag('icons/arrow_left.png'), articles_path %>
 <%= link_to 'back', articles_path %>
