--- a/project04/app/views/articles/new.html.erb
+++ b/project04/app/views/articles/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :subtitles do %>...not just for the country of Spain<% end %>
+
 
 <%= link_to image_tag('icons/arrow_left.png'), articles_path %>
 <%= link_to 'list all articles', articles_path %>
