--- a/project04/app/views/articles/index.html.erb
+++ b/project04/app/views/articles/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :subtitles do %>...with a name .com hipsters love!<% end %>
+
+
 <h1>All the World's Articles</h1>
 
 <div id="newLink">
