--- a/project04/app/views/articles/show.html.erb
+++ b/project04/app/views/articles/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :subtitles do %>...what's "Articl" in Spanish anyway?<% end %>
+
+
 <p id="notice"><%= notice %></p>
 
 <%= link_to image_tag('icons/arrow_left.png'), articles_path %>
