--- a/project04/app/views/articles/edit.html.erb
+++ b/project04/app/views/articles/edit.html.erb
@@ -1,6 +1,10 @@
 <% content_for :subtitles do %>...my cousin works for Bit.ly<% end %>
 
 
+<% flash.each do |key, msg| %>
+  <%= content_tag :div, msg, :id => key %>
+<% end %>
+
 <%= link_to image_tag('icons/arrow_left.png'), articles_path %>
 <%= link_to 'back', articles_path %>
 <br><br>
