--- a/project04/app/views/articles/new.html.erb
+++ b/project04/app/views/articles/new.html.erb
@@ -10,4 +10,4 @@
 <br><br>
 <h1>Creating a New Article</h1>
 <br><br>
-<%= render 'form' %>
+<%= render :partial => 'form', :locals => { :edit => false } %>
