--- a/project04/app/views/articles/edit.html.erb
+++ b/project04/app/views/articles/edit.html.erb
@@ -5,8 +5,8 @@
   <%= content_tag :div, msg, :id => key %>
 <% end %>
 
-<%= link_to image_tag('icons/arrow_left.png'), articles_path %>
-<%= link_to 'back', articles_path %>
+<%= link_to image_tag('icons/arrow_left.png'), articles_path, :title => "Click to go back" %>
+<%= link_to 'back', articles_path, :title => "Click to go back" %>
 <br><br>
 <h1>Editing "<%= @article.title %>"</h1>
 <br><br>
