--- a/project04/app/views/articles/index.html.erb
+++ b/project04/app/views/articles/index.html.erb
@@ -8,8 +8,8 @@
 <h1>All the World's Articles</h1>
 
 <div id="newLink">
-	<%= link_to image_tag('icons/add.png'), new_article_path %>
-	<%= link_to 'Create an Article', new_article_path %>
+	<%= link_to image_tag('icons/add.png'), new_article_path, :title => "Click to make a new article" %>
+	<%= link_to 'Create an Article', new_article_path, :title => "Click to make a new article" %>
 </div>
 
 <div class="tablewrapper">
@@ -31,9 +31,9 @@
     			<td><%= truncate(article.body, length: 65) %></td>
     			<td><%= article.creation.strftime("%A, %b. %d %Y") %></td>
     			<td class="edge">
-					<%= link_to image_tag('icons/magnifier.png'), article %>
-					<%= link_to image_tag('icons/book_edit.png'), edit_article_path(article) %>
-    				<%= link_to image_tag('icons/delete.png'), article, confirm: 'Are you sure?', method: :delete %>
+					<%= link_to image_tag('icons/magnifier.png'), article, :title => "Click to view the article" %>
+					<%= link_to image_tag('icons/book_edit.png'), edit_article_path(article), :title => "Click to edit the article" %>
+    				<%= link_to image_tag('icons/delete.png'), article_path(article), method: :delete, confirm: 'Are you sure?', :title => "Click to delete the article" %>
 				</td>
   			</tr>
 			<% end %>
