Finished styling pagination controls and removed old scrolling table stuff

--- a/project05/app/assets/stylesheets/articles.css.scss
+++ b/project05/app/assets/stylesheets/articles.css.scss
@@ -2,9 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.tablewrapper {
-	height:265px;
-	overflow:auto;
+.paginatewrapper {
+	text-align:center;
+	margin:0 auto;
+	padding-top:10px;
+	padding-bottom:10px;
 }
 
 table {
