--- a/project05/app/views/authors/_form.html.erb
+++ b/project05/app/views/authors/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@author) do |f| %>
+<%= form_for @author, :html => { :multipart => true } do |f| %>
   <% if @author.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@author.errors.count, "error") %> prohibited this author from being saved:</h2>
@@ -14,6 +14,10 @@
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
+  </div>
+  <div class="field">
+  	<%= f.label :photo %><br />
+    <%= f.file_field :photo %>
   </div>
   <div class="actions">
     <%= f.submit %>
