--- a/project05/app/views/articles/edit.html.erb
+++ b/project05/app/views/articles/edit.html.erb
@@ -8,6 +8,6 @@
 <%= link_to image_tag('icons/arrow_left.png'), articles_path, :title => "Click to go back" %>
 <%= link_to 'back', articles_path, :title => "Click to go back" %>
 <br><br>
-<h1>Editing "<%= @article.title %>"</h1>
+<h1>Editing "<%=h @article.title %>"</h1>
 <br><br>
 <%= render :partial => 'form', :locals => { :edit => true } %>
