--- a/project05/app/views/articles/index.html.erb
+++ b/project05/app/views/articles/index.html.erb
@@ -27,9 +27,9 @@
   		<tbody>
 			<% @articles.each do |article| %>
   			<tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
-    			<td><%= article.title %></td>
-    			<td><%= article.author %></td>
-    			<td><%= truncate(article.body, length: 65) %></td>
+    			<td><%=h article.title %></td>
+    			<td><%=h article.author %></td>
+    			<td><%=h truncate(article.body, length: 65) %></td>
     			<td><%= article.creation.strftime("%A, %b. %d %Y") %></td>
     			<td class="edge">
 					<%= link_to image_tag('icons/magnifier.png'), article, :title => "Click to view the article" %>
