--- a/project05/app/views/authors/edit.html.erb
+++ b/project05/app/views/authors/edit.html.erb
@@ -8,6 +8,6 @@
 <%= link_to image_tag('icons/arrow_left.png'), authors_path, :title => "Click to go back" %>
 <%= link_to 'back', authors_path, :title => "Click to go back" %>
 <br><br>
-<h1>Editing "<%= @author.name %>"</h1>
+<h1>Editing "<%=h @author.name %>"</h1>
 <br><br>
 <%= render :partial => 'form', :locals => { :edit => true } %>
