--- a/project05/app/views/authors/index.html.erb
+++ b/project05/app/views/authors/index.html.erb
@@ -20,7 +20,7 @@
 
 <% @authors.each do |author| %>
   <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
-    <td><%= author.name %></td>
+    <td><%=h author.name %></td>
     <td class="edge">
 		<%= link_to image_tag('icons/magnifier.png'), author, :title => "Click to view the author" %>
 		<%= link_to image_tag('icons/book_edit.png'), edit_author_path(author), :title => "Click to edit the author" %>
