DRY'ed up my CSS

--- a/project05/app/assets/stylesheets/application.css.scss
+++ b/project05/app/assets/stylesheets/application.css.scss
@@ -38,3 +38,46 @@ body {
 	padding-left:20px;
 	padding-right:20px;
 }
+
+.paginatewrapper {
+	text-align:center;
+	margin:0 auto;
+	padding-top:10px;
+	padding-bottom:10px;
+}
+
+table {
+ 	border-collapse:collapse; 
+	border:1px solid black;
+	width:900px;
+	margin-top:10px;
+	
+	th {
+		background-color:#CCC;
+	}
+	
+	th, td {
+		border-right:1px solid black
+	}
+	
+	td {
+		padding-top:4px;
+		padding-bottom:4px;
+	}
+	
+	.list_line_even {
+		background:#fff;
+	}
+	
+	.list_line_odd {
+		background:#eee;
+	}
+}
+
+h1 {
+	display:inline;
+}
+
+#newLink {
+	float:right;
+}
