--- a/project05/app/views/authors/index.html.erb
+++ b/project05/app/views/authors/index.html.erb
@@ -5,7 +5,7 @@
   <%= content_tag :div, msg, :id => key %>
 <% end %>
 
-<h1>Listing Authors</h1>
+<h1>All the World's Authors</h1>
 
 <div id="newLink">
 	<%= link_to image_tag('icons/add.png'), new_author_path, :title => "Click to make a new author" %>
