--- a/project05/app/assets/stylesheets/application.css.scss
+++ b/project05/app/assets/stylesheets/application.css.scss
@@ -46,12 +46,14 @@ body {
 	height:30px;
 	background-color:#EEE;
 	margin-bottom:30px;
+	border-top:1px solid;
+	border-bottom:1px solid;
 	
 	.baritem {
 		position:relative;
 		top:5px;
-		padding-left:20px;
-		padding-right:20px;
+		padding-left:25px;
+		padding-right:25px;
 	}
 }
 
