--- a/project05/app/views/authors/show.html.haml
+++ b/project05/app/views/authors/show.html.haml
@@ -18,3 +18,6 @@
 %br/
 Articles written by #{h @author.name}:
 %ul
+  - @author.articles.each do |article|
+    - if article.author == @author
+      %li= h article.title
