Various fixes and changes

--- a/project05/app/views/articles/_form.html.haml
+++ b/project05/app/views/articles/_form.html.haml
@@ -12,9 +12,9 @@
     %br/
     = f.text_field :title
   .field
-    = f.label :author, 'Author Name'
+    = f.label :author_id, 'Author Name'
     %br/
-    = f.text_field :author
+    = f.text_field :author_id
   .field
     = f.label :body
     %br/
