--- a/project06/app/views/users/_form.html.erb
+++ b/project06/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h2>Sorry, could not register you:</h2>
 
       <ul>
       <% @user.errors.full_messages.each do |msg| %>
@@ -16,10 +16,6 @@
     <%= f.text_field :username %>
   </div>
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
     <%= f.label :password %><br />
     <%= f.password_field :password %>
   </div>
@@ -28,12 +24,16 @@
     <%= f.password_field :password_confirmation %>
   </div>
   <div class="field">
-    <%= f.label :first %><br />
+    <%= f.label :first, "First Name" %><br />
     <%= f.text_field :first %>
   </div>
   <div class="field">
-    <%= f.label :last %><br />
+    <%= f.label :last, "Last Name" %><br />
     <%= f.text_field :last %>
+  </div>
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.text_field :email %>
   </div>
   <div class="actions">
     <%= f.submit "Submit" %>
