--- a/project06/app/views/users/new.html.erb
+++ b/project06/app/views/users/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New user</h1>
-
+<h1>Register</h1>
+Already registered? <%= link_to 'Login.', new_user_session_path %>
+<br><br>
 <%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
