Pagination for list of users

--- a/project06/app/views/users/index.html.erb
+++ b/project06/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Listing users</h1>
 <p id="notice"><%= notice %></p>
+<div class="paginatewrapper"><%= will_paginate @posts %></div>
 <table>
   <tr>
 	<th>Name</th>
@@ -17,7 +18,3 @@
   </tr>
 <% end %>
 </table>
-
-<br />
-
-<%= link_to 'New User', new_user_path %>
