Captcha is displayed on registration form

--- a/project06/app/views/users/_form.html.erb
+++ b/project06/app/views/users/_form.html.erb
@@ -35,6 +35,7 @@
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
+<%= recaptcha_tags %>
   <div class="actions">
     <%= f.submit "Submit" %>
   </div>
