--- a/project06/app/views/users/_form.html.haml
+++ b/project06/app/views/users/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@user) do |f|
+= form_for(@user, html: { multipart: true}) do |f|
   - if @user.errors.any?
     #error_explanation
       %h2 Sorry, could not register you:
@@ -29,6 +29,9 @@
     = f.label :email
     %br/
     = f.text_field :email
+  .field
+    = f.label :photo
+    = f.file_field :photo
   = recaptcha_tags
   .actions
     = f.submit "Submit"
