--- a/project06/app/views/users/index.html.haml
+++ b/project06/app/views/users/index.html.haml
@@ -9,7 +9,10 @@
     %th FUTURE
   - @users.each do |user|
     %tr
-      %td= link_to user.name, edit_user_path(user)
+      - if permitted_to? :edit, user
+        %td= link_to user.name, edit_user_path(user)
+      - else
+        %td= user.name
       %td= user.username
       %td LASTLOGIN
       %td FUTURE
