--- a/project06/app/views/roles/index.html.haml
+++ b/project06/app/views/roles/index.html.haml
@@ -2,12 +2,14 @@
 %table
   %tr
     %th Name
+    %th Number of Users
     %th
     %th
     %th
   - @roles.each do |role|
     %tr
       %td= role.name
+      %td= role.users.count
       %td= link_to 'Show', role
       %td= link_to 'Edit', edit_role_path(role)
       %td= link_to 'Destroy', role, confirm: 'Are you sure?', method: :delete
