Last login time migration

--- a/project06/app/views/layouts/application.html.haml
+++ b/project06/app/views/layouts/application.html.haml
@@ -9,7 +9,8 @@
     #nav
       - if current_user
         Logged in as
-        \#{link_to current_user.name, edit_user_path(current_user.id)}, ROLE.
+        \#{link_to current_user.name, edit_user_path(current_user.id)},
+        = current_user.role.name + '.'
         \#{link_to "Logout", :logout}
       - else
         = link_to "Login", :login
