--- a/project06/app/views/users/index.html.haml
+++ b/project06/app/views/users/index.html.haml
@@ -14,5 +14,5 @@
       - else
         %td= user.name
       %td= user.username
-      %td LASTLOGIN
+      %td= user.last_login_at
       %td FUTURE
