Updating admin role views to use proper url helpers. (yjb)

--- a/project06/app/views/admin/roles/index.html.haml
+++ b/project06/app/views/admin/roles/index.html.haml
@@ -10,8 +10,8 @@
     %tr
       %td= role.name
       %td= role.users.count
-      %td= link_to 'Show', role
-      %td= link_to 'Edit', edit_role_path(role)
-      %td= link_to 'Destroy', role, confirm: 'Are you sure?', method: :delete
+      %td= link_to 'Show', admin_role_path(role)
+      %td= link_to 'Edit', edit_admin_role_path(role)
+      %td= link_to 'Destroy', admin_role_path(role), confirm: 'Are you sure?', method: :delete
 %br/
-= link_to 'New Role', new_role_path
+= link_to 'New Role', new_admin_role_path
