--- a/project06/app/views/admin/roles/show.html.haml
+++ b/project06/app/views/admin/roles/show.html.haml
@@ -2,6 +2,6 @@
 %p
   %b Name:
   = @role.name
-= link_to 'Edit', edit_role_path(@role)
+= link_to 'Edit', edit_admin_role_path(@role)
 |
-\#{link_to 'Back', roles_path}
+\#{link_to 'Back', admin_roles_path}
