--- a/project06/app/views/admin/roles/edit.html.haml
+++ b/project06/app/views/admin/roles/edit.html.haml
@@ -1,5 +1,5 @@
 %h1 Editing role
 = render 'form'
-= link_to 'Show', @role
+= link_to 'Show', admin_role_path(@role)
 |
-\#{link_to 'Back', roles_path}
+\#{link_to 'Back', admin_roles_path}
