--- a/project06/app/views/admin/users/_form.html.haml
+++ b/project06/app/views/admin/users/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@user, html: { multipart: true}) do |f|
+= form_for([:admin, @user], html: { multipart: true}) do |f|
   - if @user.errors.any?
     #error_explanation
       - if @user.new_record?
