--- a/project06/app/views/admin/users/index.html.haml
+++ b/project06/app/views/admin/users/index.html.haml
@@ -9,7 +9,7 @@
     %th FUTURE
   - @users.each do |user|
     %tr
-      %td= link_to user.name, edit_user_path(user)
+      %td= link_to user.name, edit_admin_user_path(user)
       %td= user.name
       %td= user.username
       - if user.last_login_at
@@ -17,4 +17,4 @@
       - else
         %td none
       %td FUTURE
-= link_to 'New User', new_user_path
+= link_to 'New User', new_admin_user_path
