--- a/project06/app/views/admin/users/show.html.haml
+++ b/project06/app/views/admin/users/show.html.haml
@@ -20,6 +20,6 @@
 %p
   %b Last:
   = @user.last
-= link_to 'Edit', edit_user_path(@user)
+= link_to 'Edit', edit_admin_user_path(@user)
 |
-\#{link_to 'Back', users_path}
+\#{link_to 'Back', admin_users_path}
