--- a/project06/app/views/layouts/application.html.haml
+++ b/project06/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     #nav
       - if current_user
         Logged in as
-        \#{link_to current_user.name, edit_user_path(current_user.id)},
+        \#{link_to current_user.name, member_me_path},
         = current_user.role.name + '.'
         \#{link_to "Logout", :logout}
       - else
