--- a/project06/app/views/member/users/_form.html.haml
+++ b/project06/app/views/member/users/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@user, html: { multipart: true}) do |f|
+= form_for([:member, @user], html: { multipart: true}) do |f|
   - if @user.errors.any?
     #error_explanation
       - if @user.new_record?
@@ -11,10 +11,7 @@
   .field
     = f.label :username
     %br/
-    - if @user.new_record?
-      = f.text_field :username
-    - else
-      = f.text_field :username, :disabled => true
+    = f.text_field :username
   .field
     = f.label :password
     %br/
