--- a/project06/app/views/admin/roles/index.html.haml
+++ b/project06/app/views/admin/roles/index.html.haml
@@ -8,7 +8,7 @@
     %th
   - @roles.each do |role|
     %tr
-      %td= role.name
+      %td= link_to role.name, edit_admin_role_path(role)
       %td= role.users.count
       %td= link_to 'Show', admin_role_path(role)
       %td= link_to 'Edit', edit_admin_role_path(role)
