--- a/project06/app/views/member/users/_form.html.haml
+++ b/project06/app/views/member/users/_form.html.haml
@@ -11,7 +11,7 @@
   .field
     = f.label :username
     %br/
-    = f.text_field :username
+    = f.text_field :username, disabled: true
   .field
     = f.label :password
     %br/
