--- a/project06/app/views/layouts/application.html.haml
+++ b/project06/app/views/layouts/application.html.haml
@@ -11,10 +11,13 @@
         Logged in as
         \#{link_to current_user.name, member_me_path},
         = current_user.role.name + '.'
-				My games links to my games
+        My games links to my games
         \#{link_to "Logout", :logout}
       - else
         = link_to "Login", :login
         |
         \#{link_to "Register", new_user_path}
+    %p#notice= flash[:notice]
+    %p#warning= flash[:warning]
+    %p#error= flash[:error]
     = yield
