--- a/project06/app/assets/stylesheets/application.css.scss
+++ b/project06/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,49 @@
  *= require_tree .
 */
 
+body {
+	text-align:center;
+	margin:0 auto;
+}
+
+#title {
+	padding-top:10px;
+	padding-bottom:30px;
+	
+	h1 {
+		font:normal 60px "Helvetica", sans-serif;
+		margin-bottom:-10px;
+	}
+}
+
+#body {
+	width:900px;
+	margin:0 auto;
+	text-align:left;
+	padding-left:20px;
+	padding-right:20px;
+}
+
 #nav {
 	float:right;
+	padding-top:10px;
+	padding-right:10px;
+}
+
+#menubar {
+	text-align:center;
+	margin:0 auto;
+	width:100%;
+	height:30px;
+	background-color:#EEE;
+	margin-bottom:30px;
+	border-top:1px solid;
+	border-bottom:1px solid;
+	
+	.baritem {
+		position:relative;
+		top:5px;
+		padding-left:25px;
+		padding-right:25px;
+	}
 }
