--- a/project06/app/views/layouts/member.html.haml
+++ b/project06/app/views/layouts/member.html.haml
@@ -6,15 +6,15 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    #nav
+ 		#nav
       Logged in as
-      \#{link_to current_user.name, edit_admin_user_path(current_user.id)},
+      \#{link_to current_user.name, member_me_path},
       = current_user.role.name + '.'
-      = link_to "Admin", :admin_users
-      My Games
-      = link_to "Logout", :logout
+      My games links to my games
+      Member links to member home
+      \#{link_to "Logout", :logout}
     #title
-      %h1 Gamez : Admin
+      %h1 Gamez : Member
     #menubar
       -#%span.baritem= link_to 'Games', admin_games_path, :title => "Click to view games"
       %span.baritem= link_to 'Users', admin_users_path, :title => "Click to view users"
