--- a/project06/app/views/layouts/admin.html.haml
+++ b/project06/app/views/layouts/admin.html.haml
@@ -10,7 +10,7 @@
       Logged in as
       \#{link_to current_user.name, edit_admin_user_path(current_user.id)},
       = current_user.role.name + '.'
-      = link_to "Admin", :admin_users
+      = link_to "Admin", :admin_root
       My Games
       = link_to "Logout", :logout
     #title
