--- a/project06/app/views/layouts/member.html.haml
+++ b/project06/app/views/layouts/member.html.haml
@@ -10,8 +10,7 @@
       Logged in as
       \#{link_to current_user.name, member_me_path},
       = current_user.role.name + '.'
-      My games links to my games
-      Member links to member home
+      = link_to "My Games", :member_root
       \#{link_to "Logout", :logout}
     #title
       %h1 Gamez : Member
