--- a/project06/app/views/layouts/admin.html.haml
+++ b/project06/app/views/layouts/admin.html.haml
@@ -11,7 +11,7 @@
       \#{link_to current_user.name, edit_admin_user_path(current_user.id)},
       = current_user.role.name + '.'
       = link_to "Admin", :admin_root
-      My Games
+      My Games-#= link_to "My Games", :admin_games
       = link_to "Logout", :logout
     #title
       %h1 Gamez : Admin
