--- a/project06/app/assets/stylesheets/application.css.scss
+++ b/project06/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,15 @@ body {
 		font:normal 60px "Helvetica", sans-serif;
 		margin-bottom:-10px;
 	}
+	
+	a {
+		color:#00F;
+	}
+	
+	a:hover {
+		color:#77F;
+		background-color:#FFF;
+	}
 }
 
 #body {
