--- a/project06/app/views/layouts/admin.html.haml
+++ b/project06/app/views/layouts/admin.html.haml
@@ -11,10 +11,11 @@
       \#{link_to current_user.name, edit_admin_user_path(current_user.id)},
       = current_user.role.name + '.'
       = link_to "Admin", :admin_root
-      My Games-#= link_to "My Games", :admin_games
+      My Games-
+      -#= link_to "My Games", :admin_games
       = link_to "Logout", :logout
     #title
-      %h1 Gamez : Admin
+      %h1= link_to("Gamez", root_path) + " : Admin"
     #menubar
       -#%span.baritem= link_to 'Games', admin_games_path, :title => "Click to view games"
       %span.baritem= link_to 'Users', admin_users_path, :title => "Click to view users"
