--- a/project06/app/views/admin/roles/index.html.haml
+++ b/project06/app/views/admin/roles/index.html.haml
@@ -7,7 +7,7 @@
     %th
     %th
   - @roles.each do |role|
-    %tr
+    %tr{:class => cycle('list_line_odd', 'list_line_even')}
       %td= link_to role.name, edit_admin_role_path(role)
       %td= role.users.count
       %td= link_to 'Show', admin_role_path(role)
