--- a/project06/app/views/users/index.html.haml
+++ b/project06/app/views/users/index.html.haml
@@ -7,7 +7,7 @@
     %th Last Login
     %th FUTURE
   - @users.each do |user|
-    %tr
+    %tr{:class => cycle('list_line_odd', 'list_line_even')}
       - if permitted_to? :edit, user
         %td= link_to user.name, edit_user_path(user)
       - else
