Too much to remember

--- a/project06/app/views/layouts/admin.html.haml
+++ b/project06/app/views/layouts/admin.html.haml
@@ -15,7 +15,7 @@
     #title
       %h1= link_to("Gamez", root_path) + " : Admin"
     #menubar
-      -#%span.baritem= link_to 'Games', admin_games_path, :title => "Click to view games"
+      %span.baritem= link_to 'Games', admin_games_path, :title => "Click to view games"
       %span.baritem= link_to 'Users', admin_users_path, :title => "Click to view users"
       %span.baritem= link_to 'Roles', admin_roles_path, :title => "Click to view roles"
     #body
