--- a/project06/app/views/member/games/index.html.haml
+++ b/project06/app/views/member/games/index.html.haml
@@ -1,3 +1,5 @@
+%h1 My Gamez
+= link_to 'add a new game', new_game_path
 .paginatewrapper= will_paginate @games
 %table
   %tr
@@ -6,6 +8,8 @@
     %th Date Added
   - @games.each do |game|
     %tr{:class => cycle('list_line_odd', 'list_line_even')}
-      %td= game.title
+      %td= link_to game.title, edit_game_path(game)
       %td= rating_for_game(game)
       %td= game.created_at.strftime("%A, %b. %d %Y") + " by " + name_for_game(game)
+%br/
+I've created x games, x% of which are rated.
