--- a/project06/app/views/member/games/edit.html.haml
+++ b/project06/app/views/member/games/edit.html.haml
@@ -1,5 +1,3 @@
 %h1 Editing game
 = render 'form'
-= link_to 'Show', @game
-|
-\#{link_to 'Back', games_path}
+= link_to 'Destroy', [:member, @game], confirm: 'Are you sure?', method: :delete
